# iot-bot

./: .gitignore  Makefile  a.py  dropdown.py  err.txt  out.opus  pyproject.toml  quary.json
iot_bot/: .env-exaple  __init__.py  __main__.py
iot_bot/cogs/: common.py
iot_bot/cogs/yomiage/: __init__.py  board.py  data.json  data.py  voivo.py
